@@ -2,6 +2,7 @@
 -revise surface alpha.
 -update transform to preserve surface alpha.
 -add vector copy method.
+-revise mixer set_num_channels method.
 
 0.32    2022-04-17
 -add key set_repeat method.
